# OctoFishstick

./: .clangd  .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-run.sh  build.sh  meson.build
resources/: app.css  octofishstick.gresource.xml
resources/css/: app.css
resources/scss/: main.scss  window.scss
src/: actions.c  actions.h  api.c  api.h  app.c  app.h  main.c  resources.c  resources.h  ticker.c  ticker.h  ui.h  user.c  user.h  window.c  window.h
src/actions/: action_add_ticker.c  action_add_ticker.h
src/background/: api_worker.c  api_worker.h
src/helpers/: macro.h  string_helpers.c  string_helpers.h  time_helpers.c  time_helpers.h  widget_helpers.c  widget_helpers.h
src/storage/: local_storage.c  local_storage.h
src/views/: add_ticker_dialog.c  add_ticker_dialog.h  footer.c  footer.h  watchlist.c  watchlist.h
